# GPause-2

./: README.md  bundle-sidecar.ps1  index.html  package.json  tailwind.config.js
src/: App.tsx  icons.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: WindowTitleBar.tsx
src/layouts/: DefaultLayout.tsx
src/pages/: HomePage.tsx
src/sidecar/: GPauseCore.ts
